fix: Fixed Sage Tome Sentience Upgrade tooltip

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -687,7 +687,7 @@ item.ancientspellcraft\:soulbound_upgrade.desc=Upgrades a wand to make it stay i
 item.ancientspellcraft\:soulbound_upgrade.name=Wand Soulbinding Upgrade
 item.ancientspellcraft\:sentience_upgrade.desc=Upgrades a Sage Tome's sentience while the Awakened Tome spell is active\nI: The tome follows the sage\nII: The tome occasionally casts its buff spells on the sage\nIII: No additional effect (WIP)
 item.ancientspellcraft\:sentience_upgrade.name=Sage Tome Sentience Upgrade
-item.ancientspellcraft\:empowerment_upgrade.desc=Grants +%1$s%% potency to all other elements
+item.ancientspellcraft\:empowerment_upgrade.desc=Grants %1$s%% potency to all other elements
 item.ancientspellcraft\:empowerment_upgrade.name=Sage Tome Empowerment Upgrade
 item.ancientspellcraft\:spectral_fishing_rod.name=Spectral Fishing Rod
 item.ancientspellcraft\:spectral_shield.name=Spectral Shield
