feat: Renamed the old Runic Hammer artefact to Jeweller's Hammer

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -454,7 +454,7 @@ item.ancientspellcraft\:charm_reanimation.name=Talisman of Necromancy
 item.ancientspellcraft\:charm_rift_bottle.desc=Allows opening interdimensional Transportation Portals
 item.ancientspellcraft\:charm_rift_bottle.name=Rift in a Bottle
 item.ancientspellcraft\:charm_runic_hammer.desc=With this mythic hammer, all of your transmutated artefacts becomes Rings. Armour upgrade items always transmute into Crystal Silver Plating
-item.ancientspellcraft\:charm_runic_hammer.name=Runic Hammer
+item.ancientspellcraft\:charm_runic_hammer.name=Jeweller's Hammer
 item.ancientspellcraft\:charm_scissors.desc=Touching these scissors gives you the shivers, but its potent magic allows you to always transmute artefacts into Amulets or Belts. Armour upgrade items always transmute into Ethereal Crystalweave
 item.ancientspellcraft\:charm_scissors.name=Scissors of the Moirae
 item.ancientspellcraft\:charm_seed_bag.desc=Casting the Harvest spell also attempts to replant seeds from the inventory
