fix: Updated Runeword descriptions. Fixes #231

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1215,19 +1215,19 @@ spell.ancientspellcraft\:zombification=Zombification
 # runewords
 spell.ancientspellcraft\:runeword_blast.desc=The next hit of the Spell Blade blasts the enemy away over a large distance.
 spell.ancientspellcraft\:runeword_blast=Runeword: Blast
-spell.ancientspellcraft\:runeword_sealbreaker.desc=Dispels an arcane wall which protects a structure.
+spell.ancientspellcraft\:runeword_sealbreaker.desc=Dispels an arcane wall within 6 squares which protects a structure.
 spell.ancientspellcraft\:runeword_sealbreaker=Runeword: Sealbreaker
-spell.ancientspellcraft\:runeword_briar.desc=Hitting an enemy with the Spell Blade has a chance to cause thorn bushes to sprout near the enemy.
+spell.ancientspellcraft\:runeword_briar.desc=Hitting an enemy with the Spell Blade has a 20%% chance to cause thorn bushes to sprout near the enemy for 5 seconds.
 spell.ancientspellcraft\:runeword_briar=Runeword: Briar
 spell.ancientspellcraft\:runeword_displace.desc=The next 3 hits of the Spell Blade teleports the target to a nearby location.
 spell.ancientspellcraft\:runeword_displace=Runeword: Displace
-spell.ancientspellcraft\:runeword_endure.desc=Hold your ground for 5 seconds, reinforcing your defense.
+spell.ancientspellcraft\:runeword_endure.desc=Hold your ground for 8 seconds, reinforcing your defense.
 spell.ancientspellcraft\:runeword_endure=Runeword: Endure
-spell.ancientspellcraft\:runeword_exorcise.desc=Blesses the Spell Blade, causing the next 3 attacks deal 50%% more damage against undeads, weaken them and set them on fire.
+spell.ancientspellcraft\:runeword_exorcise.desc=Blesses the Spell Blade, causing the next 3 attacks deal 50%% more damage against undeads, weaken them and set them on fire for 10 seconds.
 spell.ancientspellcraft\:runeword_exorcise=Runeword: Exorcise
-spell.ancientspellcraft\:runeword_implode.desc=The Spell Blade pulls in all nearby enemies and deals a small amount of damage to them.
+spell.ancientspellcraft\:runeword_implode.desc=The Spell Blade pulls in all enemies within 12 blocks and deals 3 damage to them.
 spell.ancientspellcraft\:runeword_implode=Runeword: Implode
-spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by up to 50%%.
+spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by 5%% per hit, to a maximum of 100% increase.
 spell.ancientspellcraft\:runeword_fury=Runeword: Fury
 spell.ancientspellcraft\:runeword_pull.desc=Greatly increases the attack range of the Spell Blade and pulls the enemy for the next 2 attacks.
 spell.ancientspellcraft\:runeword_pull=Runeword: Pull
@@ -1237,15 +1237,15 @@ spell.ancientspellcraft\:runeword_reach.desc=Greatly increases the attack range 
 spell.ancientspellcraft\:runeword_reach=Runeword: Reach
 spell.ancientspellcraft\:runeword_shatter.desc=Empowers the Spell Blade, causing its next hit to disable the shield of the enemy.
 spell.ancientspellcraft\:runeword_shatter=Runeword: Shatter
-spell.ancientspellcraft\:runeword_sol.desc=Hitting an enemy with the Spell Blade blinds it for 5 seconds.
+spell.ancientspellcraft\:runeword_sol.desc=The next 3 hits with the Spell Blade blinds the target for 5 seconds.
 spell.ancientspellcraft\:runeword_sol=Runeword: Sol
-spell.ancientspellcraft\:runeword_suppress.desc=The next 3 hits of the Spell Blade applies a stacking Magical Exhaustion effect on the target for 3 seconds. If the target is already affected, some of it backfires on the Battlemage too.
+spell.ancientspellcraft\:runeword_suppress.desc=The next 3 hits of the Spell Blade applies a stacking Magical Exhaustion effect on the target for 2 seconds. If the target is already affected, some of it backfires on the Battlemage too.
 spell.ancientspellcraft\:runeword_suppress=Runeword: Suppress
-spell.ancientspellcraft\:runeword_strength.desc=Temporarily empowers you with Strength.
+spell.ancientspellcraft\:runeword_strength.desc=Empowers you with Strength for 20 seconds.
 spell.ancientspellcraft\:runeword_strength=Runeword: Strength
-spell.ancientspellcraft\:runeword_ignite.desc=The next hit with the Spell Blade sets the target on fire for a long duration.
+spell.ancientspellcraft\:runeword_ignite.desc=The next hit with the Spell Blade sets the target on fire for 13 seconds.
 spell.ancientspellcraft\:runeword_ignite=Runeword: Ignite
-spell.ancientspellcraft\:runeword_imbue.desc=Imbue the Spell Blade with a potion from the hotbar for the next few hits.
+spell.ancientspellcraft\:runeword_imbue.desc=Imbue the Spell Blade with a potion from the hotbar for the next 10 hits.
 spell.ancientspellcraft\:runeword_imbue=Runeword: Imbue
 spell.ancientspellcraft\:runeword_empower.desc=Instantly charges the Spell Blade, causing its next attack to trigger its empowered effect.
 spell.ancientspellcraft\:runeword_empower=Runeword: Empower
@@ -1255,7 +1255,7 @@ spell.ancientspellcraft\:runeword_arcane.desc=Imbue the Spell Blade with arcane 
 spell.ancientspellcraft\:runeword_arcane=Runeword: Arcane
 spell.ancientspellcraft\:runeword_disarm.desc=The next attack with the Spell Blade will disable the targeted player's held items for 3 seconds.
 spell.ancientspellcraft\:runeword_disarm=Runeword: Disarm
-spell.ancientspellcraft\:runeword_meditate.desc=Meditates to restore the energy of a Runic Shield in the offhand. Continuous spell.
+spell.ancientspellcraft\:runeword_meditate.desc=Continuously meditates to restore the energy of a Runic Shield in the offhand.
 spell.ancientspellcraft\:runeword_meditate=Runeword: Meditate
 
 # spell type
