fix: Fixed some incorrect Spellbook descriptions. Fixes #224

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -875,7 +875,7 @@ spell.ancientspellcraft\:bubble_head.desc=Forms a water bubble around the caster
 spell.ancientspellcraft\:bubble_head=Bubble Head
 spell.ancientspellcraft\:bulwark.desc=Casts a protective ward on the caster which has a greater chance to deflect physical and magical projectiles. Requires to hold a wand with mana.
 spell.ancientspellcraft\:bulwark=Bulwark
-spell.ancientspellcraft\:burrow.desc=Allows the caster to burrow into the ground. The mushroom will disappear after 2 minutes.
+spell.ancientspellcraft\:burrow.desc=Allows the caster to burrow into the ground.
 spell.ancientspellcraft\:burrow.hard_material=The material below you is too hard to dig.
 spell.ancientspellcraft\:burrow.y_limit=You can't dig deeper with this spell.
 spell.ancientspellcraft\:burrow=Burrow
@@ -963,7 +963,7 @@ spell.ancientspellcraft\:dimensional_anchor.forced_back_to_dimension=A powerful 
 spell.ancientspellcraft\:dimensional_anchor.prevent_ender_pearl=A powerful magical energy binds you to this place and prevents teleporting!
 spell.ancientspellcraft\:dimensional_anchor.prevent_spell=A powerful magical energy binds you to this place and prevents casting the spell!
 spell.ancientspellcraft\:dimensional_anchor=Dimensional Anchor
-spell.ancientspellcraft\:dispel_greater_magic.desc=Dispels greater magical constructs and rojectiles up to Advanced tier, banishes summons and removes all beneficial effects from an enemy
+spell.ancientspellcraft\:dispel_greater_magic.desc=Dispels greater magical constructs and projectiles up to Advanced tier, banishes summons and removes all beneficial effects from an enemy.
 spell.ancientspellcraft\:dispel_greater_magic=Dispel Greater Magic
 spell.ancientspellcraft\:dispel_item_curse.desc=Removes a Curse from an item in the offhand or an armor piece of the caster.
 spell.ancientspellcraft\:dispel_item_curse=Dispel Item Curse
@@ -1140,7 +1140,7 @@ spell.ancientspellcraft\:stone_fist.desc=Transforms the hand of the caster into 
 spell.ancientspellcraft\:stone_fist.full_hand=Your main hand must be empty!
 spell.ancientspellcraft\:stone_fist.wrong_hand=Must be casted from the offhand!
 spell.ancientspellcraft\:stone_fist=Stone Fist
-spell.ancientspellcraft\:stone_punch.desc=Transforms the hand of the caster into a magical stone which lasts for two hits.
+spell.ancientspellcraft\:stone_punch.desc=Transforms the hand of the caster into a more durable variant of stone punch.
 spell.ancientspellcraft\:stone_punch.full_hand=Your main hand must be empty!
 spell.ancientspellcraft\:stone_punch.wrong_hand=Must be casted from the offhand!
 spell.ancientspellcraft\:stone_punch=Stone Punch
