fix: Added name and description for Runeword: Expose spell. Fixes #243

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1225,6 +1225,8 @@ spell.ancientspellcraft\:runeword_endure.desc=Hold your ground for 8 seconds, re
 spell.ancientspellcraft\:runeword_endure=Runeword: Endure
 spell.ancientspellcraft\:runeword_exorcise.desc=Blesses the Spell Blade, causing the next 3 attacks deal 50%% more damage against undeads, weaken them and set them on fire for 10 seconds.
 spell.ancientspellcraft\:runeword_exorcise=Runeword: Exorcise
+spell.ancientspellcraft\:runeword_expose.desc=The next 10 attacks temporarily weaken the armor of the target.
+spell.ancientspellcraft\:runeword_expose=Runeword: Expose
 spell.ancientspellcraft\:runeword_implode.desc=The Spell Blade pulls in all enemies within 12 blocks and deals 3 damage to them.
 spell.ancientspellcraft\:runeword_implode=Runeword: Implode
 spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by 5%% per hit, to a maximum of 100% increase.
