fix: Can't overfill the Pensive artefact

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -555,7 +555,7 @@ item.ancientspellcraft\:magic_shield.desc=This ancient crystal shield casts a pr
 item.ancientspellcraft\:magic_shield.name=Spellbreaker
 item.ancientspellcraft\:amnesia_scroll.desc=Makes the targeted wizard forget all of his previous trades
 item.ancientspellcraft\:amnesia_scroll.name=Scroll of Amnesia
-item.ancientspellcraft\:pensive.desc=The Pensive can store your experience in a liquid form.
+item.ancientspellcraft\:pensive.desc=The Pensive can store your experience in a liquid form. (30 levels)
 item.ancientspellcraft\:relic_researched=Researched
 item.ancientspellcraft\:ring_berserker.desc=Getting critically wounded sends you into a battle rage, enhancing your strength
 item.ancientspellcraft\:ring_berserker.name=Ring of The Berserker
