--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -111,7 +111,10 @@ entity.ancientspellcraft\:healing_sigil.name=Magic
 gui.ancientspellcraft:empty_slot=Empty Slot
 gui.ancientspellcraft\:ancient_knowledge_increased=Your knowledge of ancient magic increased by %s
 gui.ancientspellcraft\:element.magic=Ancient
-gui.ancientspellcraft\:element.sage=Sage Spell
+gui.ancientspellcraft\:element.sage=Sage
+gui.ancientspellcraft\:element.warlock=Warlock
+gui.ancientspellcraft\:element.battlemage=Battlemage
+gui.ancientspellcraft\:element.ancient=Ancient
 gui.ancientspellcraft\:research=Research
 gui.ancientspellcraft\:sphere_cognizance.already_researched=You've already researched this relic
 gui.ancientspellcraft\:sphere_cognizance.hint.alteration.1=In your hands you hold the key to change the world around you
@@ -484,6 +487,10 @@ item.ancientspellcraft\:cornucopia.desc=This magical horn of plenty refills itse
 item.ancientspellcraft\:cornucopia.name=Cornucopia
 item.ancientspellcraft\:charm_sage_diary.desc=Reduces the number of required known spells before you can use the Experiment spell by 40%%
 item.ancientspellcraft\:charm_sage_diary.name=Ancient Sage Diary
+item.ancientspellcraft\:charm_dimensional_disk.desc=Expands the size of a Pocket Dimension or Orb Space. You must stand in the center of the pocket dimension and right click the Disc to activate it
+item.ancientspellcraft\:charm_dimensional_disk.name=Dimensional Disc
+item.ancientspellcraft\:body_power_gem.desc=Increases potency by 5%% when equipped. Permanently increases potency by 1%% when absorbed without overriding the currently absorbed artefact for Warlocks
+item.ancientspellcraft\:body_power_gem.name=Gem of Power
 item.ancientspellcraft\:crystal_shard_earth.desc_extended=These small elemental crystal shards can be combined into a whole crystal
 item.ancientspellcraft\:crystal_shard_earth.name=Verdant Crystal Shard
 item.ancientspellcraft\:crystal_shard_fire.desc_extended=These small elemental crystal shards can be combined into a whole crystal
@@ -586,6 +593,8 @@ item.ancientspellcraft\:ring_mana_greater.desc=Fuels spells when your Wand runs 
 item.ancientspellcraft\:ring_mana_greater.name=Greater Ring of Mana
 item.ancientspellcraft\:ring_mana_lesser.desc=Fuels spells when your Wand runs out of mana
 item.ancientspellcraft\:ring_mana_lesser.name=Lesser Ring of Mana
+item.ancientspellcraft\:ring_mana_cost.desc=Reduces mana costs by 7.5%%
+item.ancientspellcraft\:ring_mana_cost.name=Crystal Ring
 item.ancientspellcraft\:charm_majestic_mana.desc=Fuels spells when your Wand runs out of mana
 item.ancientspellcraft\:charm_majestic_mana.name=Majestic Mana Charm
 item.ancientspellcraft\:ring_mana_transfer.desc=Allows the wearer to transfer mana to another player's wand while sneak-casting the Conduit spell
@@ -644,7 +653,6 @@ item.ancientspellcraft\:rune_wynn.name=Wynn Rune
 item.ancientspellcraft\:rune_yngvi.name=Yngvi Rune
 item.ancientspellcraft\:runic_plate.name=Runic Plate
 item.ancientspellcraft\:mystic_spell_book.name=Mystic Spell Book
-item.ancientspellcraft\:mystic_spell_book.name=Mystic Spell Book
 item.ancientspellcraft\:forbidden_tome.name=Forbidden Tome
 item.ancientspellcraft\:sacred_mace.name=Sacred Mace
 
@@ -678,7 +686,41 @@ item.ancientspellcraft\:sage_tome_novice_necromancy.name=Novice Sage Tome
 item.ancientspellcraft\:sage_tome_novice_sorcery.name=Novice Sage Tome
 item.ancientspellcraft\:tome_controller.name=Tome Controller
 
+item.ancientspellcraft\:warlock_orb_novice_magic.name=Novice Magic Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_magic.name=Apprentice Magic Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_magic.name=Advanced Magic Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_magic.name=Master Magic Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_earth.name=Novice Earth Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_earth.name=Apprentice Earth Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_earth.name=Advanced Earth Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_earth.name=Master Earth Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_sorcery.name=Novice Sorcery Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_sorcery.name=Apprentice Sorcery Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_sorcery.name=Advanced Sorcery Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_sorcery.name=Master Sorcery Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_fire.name=Novice Fire Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_fire.name=Apprentice Fire Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_fire.name=Advanced Fire Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_fire.name=Master Fire Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_ice.name=Novice Ice Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_ice.name=Apprentice Ice Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_ice.name=Advanced Ice Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_ice.name=Master Ice Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_lightning.name=Novice Lightning Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_lightning.name=Apprentice Lightning Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_lightning.name=Advanced Lightning Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_lightning.name=Master Lightning Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_necromancy.name=Novice Necromancy Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_necromancy.name=Apprentice Necromancy Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_necromancy.name=Advanced Necromancy Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_necromancy.name=Master Necromancy Warlock Orb
+item.ancientspellcraft\:warlock_orb_novice_healing.name=Novice Healing Warlock Orb
+item.ancientspellcraft\:warlock_orb_apprentice_healing.name=Apprentice Healing Warlock Orb
+item.ancientspellcraft\:warlock_orb_advanced_healing.name=Advanced Healing Warlock Orb
+item.ancientspellcraft\:warlock_orb_master_healing.name=Master Healing Warlock Orb
+
 item.ancientspellcraft\:sage_tome.buff=+%1$s%% Mystic Spell potency
+item.ancientspellcraft\:warlock_orb.buff=+%1$s%% Chaos Spell potency
 
 item.ancientspellcraft\:scepter_mind_control.desc=Hitting a creature with the scepter permanently mind controls the creature\nYou can only charm one creature at a time with this item
 item.ancientspellcraft\:scepter_mind_control.name=Scepter of the Overlord
@@ -745,6 +787,7 @@ key.ancientspellcraft.category=Ancient Spellcraft
 key.ancientspellcraft.charm_bauble_activate=Activate Charm Bauble
 key.ancientspellcraft.charm_ring_1_activate=Activate Ring Slot 1 Bauble
 key.ancientspellcraft.charm_ring_2_activate=Activate Ring Slot 2 Bauble
+key.ancientspellcraft.key_warlock_cast=Warlock Spell Cast (Absorbed Spell)
 key.ancientspellcraft.open_radial_spell_menu=Open Radial Spell Menu
 
 # misc
@@ -822,7 +865,10 @@ ritual.ancientspellcraft\:forest.desc=This ritual was worthy of respect from the
 ritual.ancientspellcraft\:forest=Ritual of the Forest
 ritual.ancientspellcraft\:rejuvenation.desc=The Ritual of Rejuvenation is a powerful restorative spell which can mend even the largest wounds of any living creature in its effect radius within a matter of seconds. The revitalizing effects of the ritual can immediately cure Withering, Poison and Nausea.
 ritual.ancientspellcraft\:rejuvenation=Ritual of Rejuvenation
+ritual.ancientspellcraft\:warlock_attunement=Warlock Attunement
+ritual.ancientspellcraft\:warlock_attunement.desc=The Warlock Attunement ritual is a potent practice that enables a warlock to sacrifice a portion of their ability to access the powers of other paths (such as battlemage or sage) in exchange for forfeiting the freedom to access absorbed artefacts and spells.
 
+ritual.ancientspellcraft\:warlock_attunement.attuned=You are now devoted to the path of the Warlock
 # artefact set
 set.ancientspellcraft\:elemental_orbs=Orbs of the Elements
 set.ancientspellcraft\:jewels_of_power.bonus=+%s%% Potency
@@ -1229,7 +1275,7 @@ spell.ancientspellcraft\:runeword_expose.desc=The next 10 attacks temporarily we
 spell.ancientspellcraft\:runeword_expose=Runeword: Expose
 spell.ancientspellcraft\:runeword_implode.desc=The Spell Blade pulls in all enemies within 12 blocks and deals 3 damage to them.
 spell.ancientspellcraft\:runeword_implode=Runeword: Implode
-spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by 5%% per hit, to a maximum of 100% increase.
+spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by 5%% per hit, to a maximum of 100%% increase.
 spell.ancientspellcraft\:runeword_fury=Runeword: Fury
 spell.ancientspellcraft\:runeword_pull.desc=Greatly increases the attack range of the Spell Blade and pulls the enemy for the next 2 attacks.
 spell.ancientspellcraft\:runeword_pull=Runeword: Pull
@@ -1339,6 +1385,7 @@ spell.ancientspellcraft\:conjure_ink.desc=Manifests an ink sac in your hand
 message.ancientspellcraft\:missing_class_spell_requirements=Failed to cast this %1$s spell
 message.ancientspellcraft\:must_have_full_matching_set=You must wear a full set of matching %1$s armour to cast this spell
 message.ancientspellcraft\:must_use_class_item=You must use a %1$s item to cast this spell
+message.ancientspellcraft\:warlock_attunement_prevents_spell_cast=You can only use warlock spells because of your attunement!
 spell.ancientspellcraft\:spectral_floor.desc=Creates a temporary floor of conjured blocks.
 spell.ancientspellcraft\:spectral_floor=Spectral Floor
 spell.ancientspellcraft\:teleport_object.desc=Teleports the targeted block into the middle of your Transportation Stone circle
@@ -1523,40 +1570,12 @@ item.ancientspellcraft\:runic_hammer.name=Runic Hammer
 generic.ancientspellcraft\:runic_hammer_spell.no_anvil=Must be used on an Arcane Anvil
 interact.ancientspellcraft\:arcane_barrier=This arcane barrier can only be dispelled by a Scroll of Unsealing
 
-item.ancientspellcraft\:warlock_orb_novice_earth.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_earth.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_earth.name=TODO
-item.ancientspellcraft\:warlock_orb_master_earth.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_sorcery.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_sorcery.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_sorcery.name=TODO
-item.ancientspellcraft\:warlock_orb_master_sorcery.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_fire.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_fire.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_fire.name=TODO
-item.ancientspellcraft\:warlock_orb_master_fire.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_ice.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_ice.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_ice.name=TODO
-item.ancientspellcraft\:warlock_orb_master_ice.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_lightning.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_lightning.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_lightning.name=TODO
-item.ancientspellcraft\:warlock_orb_master_lightning.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_necromancy.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_necromancy.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_necromancy.name=TODO
-item.ancientspellcraft\:warlock_orb_master_necromancy.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_healing.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_healing.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_healing.name=TODO
-item.ancientspellcraft\:warlock_orb_novice_magic.name=TODO
-item.ancientspellcraft\:warlock_orb_apprentice_magic.name=TODO
-item.ancientspellcraft\:warlock_orb_advanced_magic.name=TODO
 spell.ancientspellcraft\:absorb_armor.desc=TODO
 spell.ancientspellcraft\:absorb_armor=Absorb Armor
-spell.ancientspellcraft\:absorb_artefact.desc=TODO
+spell.ancientspellcraft\:absorb_artefact.desc=Absorbs the essence of the artefact held in the off-hand, granting the warlock the ability to passively access its power.
 spell.ancientspellcraft\:absorb_artefact=Absorb Artefact
+spell.ancientspellcraft\:absorb_spell.desc=Absorbs a regular spellbook containing a spell, merging its power with the warlock. The warlock can then cast this spell in exchange for hunger (using the %1$s key), up to %2$s tier.
+spell.ancientspellcraft\:absorb_spell=Absorb Spell
 spell.ancientspellcraft\:absorb_crystal.desc=TODO
 spell.ancientspellcraft\:absorb_crystal=Absorb Crystal
 spell.ancientspellcraft\:absorb_object.desc=TODO
@@ -1567,6 +1586,10 @@ spell.ancientspellcraft\:absorb_projetile.desc=TODO
 spell.ancientspellcraft\:absorb_projetile=Absorb Projetile
 spell.ancientspellcraft\:chaos_storm.desc=TODO
 spell.ancientspellcraft\:chaos_storm=Chaos Storm
+spell.ancientspellcraft\:chaos_blast.desc=Shoots a powerful blast of chaos magic after channeling for %s seconds.
+spell.ancientspellcraft\:chaos_blast=Chaos Blast
+spell.ancientspellcraft\:chaos_vortex.desc=Continuously channels chaotic energies around the caster, damaging nearby creatures.
+spell.ancientspellcraft\:chaos_vortex=Chaos Vortex
 spell.ancientspellcraft\:confusion.desc=TODO
 spell.ancientspellcraft\:confusion=Confusion
 spell.ancientspellcraft\:orb_space.desc=TODO
@@ -1581,3 +1604,4 @@ item.ancientspellcraft\:amulet_absorb_potion.name=Amulet of Vile Attunement
 item.ancientspellcraft\:amulet_absorb_potion.desc=Absorb Potion grants immunity to the warlock against the absorbed negative potion effect for its duration.
 item.ancientspellcraft\:ring_absorb_crystal.name=Ring of Compression
 item.ancientspellcraft\:ring_absorb_crystal.desc=Absorb Crystal can absorb a crystal block, increasing a warlock's potency by 10%%
+
